--- a/arch/arm64/boot/dts/qcom/xiaomi-santoni-treble.dts
+++ b/arch/arm64/boot/dts/qcom/xiaomi-santoni-treble.dts
@@ -14,8 +14,7 @@
 /dts-v1/;
 
 #include "msm8940.dtsi"
-#include "pmi8950.dtsi"
-#include "msm8940-mtp.dtsi"
+#include "msm8940-pmi8950-mtp.dtsi"
 
 / {
 	model = "Qualcomm Technologies, Inc. MSM8940-PMI8950 QRD SKU7";
