--- a/arch/arm64/boot/dts/qcom/santoni/dsi-panel-hx8394f-boe-720p-video.dtsi
+++ b/arch/arm64/boot/dts/qcom/santoni/dsi-panel-hx8394f-boe-720p-video.dtsi
@@ -125,6 +125,9 @@
 		qcom,mdss-dsi-lp11-init;
 		qcom,mdss-dsi-init-delay-us = <50000>;
 		qcom,mdss-dsi-tx-eot-append;
+		qcom,ulps-enabled;
+		qcom,suspend-ulps-enabled;
+		qcom,panel-allow-phy-poweroff;
 	};
 };
 
