--- a/arch/arm64/boot/dts/qcom/Makefile
+++ b/arch/arm64/boot/dts/qcom/Makefile
@@ -637,6 +637,12 @@ dtb-$(CONFIG_ARCH_SDM429) += sdm429-mtp.dtb \
 
 endif
 
+ifeq ($(CONFIG_MACH_XIAOMI_SANTONI_TREBLE),y)
+dtb-$(CONFIG_MACH_XIAOMI_SANTONI_TREBLE) := ../xiaomi/msm8940-wt88536-treble.dtb
+else
+dtb-$(CONFIG_MACH_XIAOMI_SANTONI) := ../xiaomi/msm8940-wt88536.dtb
+endif
+
 always		:= $(dtb-y)
 subdir-y	:= $(dts-dirs)
 clean-files	:= *.dtb
