--- a/arch/arm64/configs/santoni_treble_defconfig
+++ b/arch/arm64/configs/santoni_treble_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION="-Jabiyeff"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
@@ -237,7 +237,6 @@ CONFIG_CFG80211=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
 # CONFIG_CFG80211_CRDA_SUPPORT is not set
 CONFIG_RFKILL=y
-CONFIG_NFC_NQ=y
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
@@ -683,4 +682,3 @@ CONFIG_CMDLINE="androidboot.usbconfigfs=true"
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_EFI is not set
 CONFIG_MSMB_CAMERA_LEGACY=y 
-CONFIG_PM_WAKELOCKS_SENSOR_IND_HACK=y
