--- a/arch/arm64/configs/santoni_treble_defconfig
+++ b/arch/arm64/configs/santoni_treble_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Jabiyeff"
+CONFIG_LOCALVERSION="-Jabiyeff-CAF"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
@@ -682,3 +682,5 @@ CONFIG_CMDLINE="androidboot.usbconfigfs=true"
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_EFI is not set
 CONFIG_MSMB_CAMERA_LEGACY=y 
+CONFIG_CRYPTO_LZ4=y
+CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM="lz4"
