--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Jabiyeff-CAF"
+CONFIG_LOCALVERSION="-perf"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
@@ -243,6 +243,7 @@ CONFIG_CFG80211=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
 # CONFIG_CFG80211_CRDA_SUPPORT is not set
 CONFIG_RFKILL=y
+CONFIG_NFC_NQ=y
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
@@ -359,6 +360,10 @@ CONFIG_POWER_RESET_QCOM=y
 # CONFIG_QCOM_DLOAD_MODE is not set
 CONFIG_QPNP_FG=y
 CONFIG_QPNP_SMBCHARGER=y
+CONFIG_QPNP_VM_BMS=y
+CONFIG_QPNP_LINEAR_CHARGER=y
+CONFIG_QPNP_TYPEC=y
+CONFIG_QPNP_QG=y
 CONFIG_MSM_APM=y
 CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
 CONFIG_THERMAL=y
@@ -678,10 +683,8 @@ CONFIG_FINGERPRINT_FPC1020=y
 CONFIG_LEDS_AW2013=y
 CONFIG_LEDS_GPIO=y
 CONFIG_MACH_XIAOMI_SANTONI=y
-CONFIG_MACH_XIAOMI_SANTONI_TREBLE=y
 CONFIG_CMDLINE="androidboot.usbconfigfs=true"
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_EFI is not set
 CONFIG_MSMB_CAMERA_LEGACY=y 
-CONFIG_CRYPTO_LZ4=y
-CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM="lz4"
+CONFIG_PM_WAKELOCKS_SENSOR_IND_HACK=y
