--- a/arch/arm64/boot/dts/qcom/Makefile
+++ b/arch/arm64/boot/dts/qcom/Makefile
@@ -637,7 +637,11 @@ dtb-$(CONFIG_ARCH_SDM429) += sdm429-mtp.dtb \
 
 endif
 
-dtb-$(CONFIG_ARCH_SDM845_VM) += sdm845-vm.dtb
+ifeq ($(CONFIG_MACH_XIAOMI_SANTONI_TREBLE),y)
+dtb-$(CONFIG_MACH_XIAOMI_SANTONI_TREBLE) := santoni/xiaomi-santoni-treble.dtb
+else
+dtb-$(CONFIG_MACH_XIAOMI_SANTONI) := santoni/xiaomi-santoni.dtb
+endif
 
 always		:= $(dtb-y)
 subdir-y	:= $(dts-dirs)
