--- a/arch/arm64/configs/santoni_treble_defconfig
+++ b/arch/arm64/configs/santoni_treble_defconfig
@@ -29,6 +29,16 @@ CONFIG_NAMESPACES=y
 # CONFIG_PID_NS is not set
 CONFIG_SCHED_AUTOGROUP=y
 CONFIG_SCHED_TUNE=y
+CONFIG_STUNE_ASSIST=y
+CONFIG_CPUSET_ASSIST=y
+CONFIG_CPUSET_AUDIO_APP="0-3"
+CONFIG_CPUSET_BG="0-1"
+CONFIG_CPUSET_CAMERA="0-3,6-7"
+CONFIG_CPUSET_DISPLAY="4-7"
+CONFIG_CPUSET_FG="0-3,6-7"
+CONFIG_CPUSET_RESTRICTED="0-3"
+CONFIG_CPUSET_SYSTEM_BG="0-3"
+CONFIG_CPUSET_TOP_APP="0-7"
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_BZIP2 is not set
@@ -84,11 +94,6 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_BOOST=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_MSM=y
 CONFIG_NET=y
