--- a/arch/arm64/boot/dts/qcom/pm8937.dtsi
+++ b/arch/arm64/boot/dts/qcom/pm8937.dtsi
@@ -338,6 +338,8 @@
 		polling-delay = <0>;
 		thermal-sensors = <&pm8937_vadc 0x11>;
 		thermal-governor = "user_space";
+                thermal-user-alarm = <37000>;
+		wake-capable-sensor;
 
 		trips {
 			active-config0 {
@@ -383,6 +385,8 @@
 		polling-delay = <0>;
 		thermal-sensors = <&pm8937_vadc 0x13>;
 		thermal-governor = "user_space";
+                thermal-user-alarm = <37000>;
+		wake-capable-sensor;
 
 		trips {
 			active-config0 {
