arm64: dts: msm8937: Set deep-nap-timeout to 100 ms Credit: zeta96

--- a/arch/arm64/boot/dts/qcom/msm8937-gpu.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8937-gpu.dtsi
@@ -55,6 +55,7 @@
 		qcom,initial-pwrlevel = <2>;
 
 		qcom,idle-timeout = <64>; //msecs
+		qcom,deep-nap-timeout = <100>; //msecs
 		qcom,strtstp-sleepwake;
 
 		qcom,highest-bank-bit = <14>;
