--- a/arch/arm64/boot/dts/qcom/pmi8950.dtsi
+++ b/arch/arm64/boot/dts/qcom/pmi8950.dtsi
@@ -11,13 +11,12 @@
  */
 
 #include <dt-bindings/msm/power-on.h>
-#include <dt-bindings/spmi/spmi.h>
-#include <dt-bindings/interrupt-controller/arm-gic.h>
 
 &spmi_bus {
+
 	qcom,pmi8950@2 {
-		compatible ="qcom,spmi-pmic";
-		reg = <0x2 SPMI_USID>;
+		spmi-slave-container;
+		reg = <0x2>;
 		#address-cells = <1>;
 		#size-cells = <1>;
 
@@ -45,12 +44,11 @@
 			reg = <0x3100 0x100>;
 			#address-cells = <1>;
 			#size-cells = <0>;
-			interrupts = <0x2 0x31 0x0 IRQ_TYPE_EDGE_RISING>;
+			interrupts = <0x2 0x31 0x0>;
 			interrupt-names = "eoc-int-en-set";
 			qcom,adc-bit-resolution = <15>;
 			qcom,adc-vdd-reference = <1800>;
 			qcom,vadc-poll-eoc;
-			#thermal-sensor-cells = <1>;
 
 			chan@0 {
 				label = "usbin";
@@ -143,33 +141,63 @@
 		};
 
 		pmi8950_gpios: gpios {
-			compatible = "qcom,spmi-gpio";
-			reg = <0xc000 0x200>;
-
-			interrupts = <0x2 0xc0 0 IRQ_TYPE_NONE>,
-				<0x2 0xc1 0 IRQ_TYPE_NONE>;
-			interrupt-names = "pmi8950_gpio1", "pmi8950_gpio2";
-
+			spmi-dev-container;
+			compatible = "qcom,qpnp-pin";
 			gpio-controller;
 			#gpio-cells = <2>;
+			#address-cells = <1>;
+			#size-cells = <1>;
+			label = "pmi8950-gpio";
+
+			gpio@c000 {
+				reg = <0xc000 0x100>;
+				qcom,pin-num = <1>;
+				status = "disabled";
+			};
+
+			gpio@c100 {
+				reg = <0xc100 0x100>;
+				qcom,pin-num = <2>;
+				status = "disabled";
+			};
 		};
 
 		pmi8950_mpps: mpps {
-			compatible = "qcom,spmi-mpp";
-			reg = <0xa000 0x400>;
-
-			interrupts = <0x2 0xa0 0 IRQ_TYPE_NONE>,
-				<0x2 0xa1 0 IRQ_TYPE_NONE>,
-				<0x2 0xa2 0 IRQ_TYPE_NONE>,
-				<0x2 0xa3 0 IRQ_TYPE_NONE>;
-			interrupt-names = "pmi8950_mpp1", "pmi8950_mpp2",
-					  "pmi8950_mpp3", "pmi8950_mpp4";
-
+			spmi-dev-container;
+			compatible = "qcom,qpnp-pin";
 			gpio-controller;
 			#gpio-cells = <2>;
+			#address-cells = <1>;
+			#size-cells = <1>;
+			label = "pmi8950-mpp";
+
+			mpp@a000 {
+				reg = <0xa000 0x100>;
+				qcom,pin-num = <1>;
+				status = "disabled";
+			};
+
+			mpp@a100 {
+				reg = <0xa100 0x100>;
+				qcom,pin-num = <2>;
+				status = "disabled";
+			};
+
+			mpp@a200 {
+				reg = <0xa200 0x100>;
+				qcom,pin-num = <3>;
+				status = "disabled";
+			};
+
+			mpp@a300 {
+				reg = <0xa300 0x100>;
+				qcom,pin-num = <4>;
+				status = "disabled";
+			};
 		};
 
-		qpnp_smbcharger: qcom,qpnp-smbcharger {
+		pmi8950_charger: qcom,qpnp-smbcharger {
+			spmi-dev-container;
 			compatible = "qcom,qpnp-smbcharger";
 			#address-cells = <1>;
 			#size-cells = <1>;
@@ -187,19 +215,18 @@
 			qcom,pmic-revid = <&pmi8950_revid>;
 			qcom,force-aicl-rerun;
 			qcom,aicl-rerun-period-s = <180>;
-			qcom,autoadjust-vfloat;
-			dpdm-supply = <&qusb_phy>;
+
 
 			qcom,chgr@1000 {
 				reg = <0x1000 0x100>;
-				interrupts =	<0x2 0x10 0x0 IRQ_TYPE_NONE>,
-						<0x2 0x10 0x1 IRQ_TYPE_NONE>,
-						<0x2 0x10 0x2 IRQ_TYPE_NONE>,
-						<0x2 0x10 0x3 IRQ_TYPE_NONE>,
-						<0x2 0x10 0x4 IRQ_TYPE_NONE>,
-						<0x2 0x10 0x5 IRQ_TYPE_NONE>,
-						<0x2 0x10 0x6 IRQ_TYPE_NONE>,
-						<0x2 0x10 0x7 IRQ_TYPE_NONE>;
+				interrupts =	<0x2 0x10 0x0>,
+						<0x2 0x10 0x1>,
+						<0x2 0x10 0x2>,
+						<0x2 0x10 0x3>,
+						<0x2 0x10 0x4>,
+						<0x2 0x10 0x5>,
+						<0x2 0x10 0x6>,
+						<0x2 0x10 0x7>;
 
 				interrupt-names =	"chg-error",
 							"chg-inhibit",
@@ -213,9 +240,9 @@
 
 			qcom,otg@1100 {
 				reg = <0x1100 0x100>;
-				interrupts =	<0x2 0x11 0x0 IRQ_TYPE_NONE>,
-						<0x2 0x11 0x1 IRQ_TYPE_NONE>,
-						<0x2 0x11 0x3 IRQ_TYPE_NONE>;
+				interrupts =	<0x2 0x11 0x0>,
+						<0x2 0x11 0x1>,
+						<0x2 0x11 0x3>;
 				interrupt-names =	"otg-fail",
 							"otg-oc",
 						"usbid-change";
@@ -223,14 +250,14 @@
 
 			qcom,bat-if@1200 {
 				reg = <0x1200 0x100>;
-				interrupts =	<0x2 0x12 0x0 IRQ_TYPE_NONE>,
-						<0x2 0x12 0x1 IRQ_TYPE_NONE>,
-						<0x2 0x12 0x2 IRQ_TYPE_NONE>,
-						<0x2 0x12 0x3 IRQ_TYPE_NONE>,
-						<0x2 0x12 0x4 IRQ_TYPE_NONE>,
-						<0x2 0x12 0x5 IRQ_TYPE_NONE>,
-						<0x2 0x12 0x6 IRQ_TYPE_NONE>,
-						<0x2 0x12 0x7 IRQ_TYPE_NONE>;
+				interrupts =	<0x2 0x12 0x0>,
+						<0x2 0x12 0x1>,
+						<0x2 0x12 0x2>,
+						<0x2 0x12 0x3>,
+					<0x2 0x12 0x4>,
+						<0x2 0x12 0x5>,
+						<0x2 0x12 0x6>,
+						<0x2 0x12 0x7>;
 
 				interrupt-names =	"batt-hot",
 							"batt-warm",
@@ -244,10 +271,10 @@
 
 			qcom,usb-chgpth@1300 {
 				reg = <0x1300 0x100>;
-				interrupts =	<0x2 0x13 0x0 IRQ_TYPE_NONE>,
-						<0x2 0x13 0x1 IRQ_TYPE_NONE>,
-						<0x2 0x13 0x2 IRQ_TYPE_NONE>,
-						<0x2 0x13 0x5 IRQ_TYPE_NONE>;
+				interrupts =	<0x2 0x13 0x0>,
+						<0x2 0x13 0x1>,
+					<0x2 0x13 0x2>,
+						<0x2 0x13 0x5>;
 
 				interrupt-names =	"usbin-uv",
 						"usbin-ov",
@@ -257,20 +284,20 @@
 
 			qcom,dc-chgpth@1400 {
 				reg = <0x1400 0x100>;
-				interrupts =	<0x2 0x14 0x0 IRQ_TYPE_NONE>,
-						<0x2 0x14 0x1 IRQ_TYPE_NONE>;
+				interrupts =	<0x2 0x14 0x0>,
+						<0x2 0x14 0x1>;
 				interrupt-names =	"dcin-uv",
 							"dcin-ov";
 			};
 
 			qcom,chgr-misc@1600 {
 				reg = <0x1600 0x100>;
-				interrupts =	<0x2 0x16 0x0 IRQ_TYPE_NONE>,
-						<0x2 0x16 0x1 IRQ_TYPE_NONE>,
-						<0x2 0x16 0x2 IRQ_TYPE_NONE>,
-						<0x2 0x16 0x3 IRQ_TYPE_NONE>,
-						<0x2 0x16 0x4 IRQ_TYPE_NONE>,
-						<0x2 0x16 0x5 IRQ_TYPE_NONE>;
+				interrupts =	<0x2 0x16 0x0>,
+						<0x2 0x16 0x1>,
+						<0x2 0x16 0x2>,
+					<0x2 0x16 0x3>,
+						<0x2 0x16 0x4>,
+						<0x2 0x16 0x5>;
 
 				interrupt-names =	"power-ok",
 							"temp-shutdown",
@@ -285,7 +312,8 @@
 			};
 		};
 
-		qpnp_fg: qcom,fg {
+		pmi8950_fg: qcom,fg {
+			spmi-dev-container;
 			compatible = "qcom,qpnp-fg";
 			#address-cells = <1>;
 			#size-cells = <1>;
@@ -303,13 +331,13 @@
 			qcom,fg-soc@4000 {
 			status = "okay";
 				reg = <0x4000 0x100>;
-				interrupts =	<0x2 0x40 0x0 IRQ_TYPE_NONE>,
-						<0x2 0x40 0x1 IRQ_TYPE_NONE>,
-						<0x2 0x40 0x2 IRQ_TYPE_NONE>,
-						<0x2 0x40 0x3 IRQ_TYPE_NONE>,
-						<0x2 0x40 0x4 IRQ_TYPE_NONE>,
-						<0x2 0x40 0x5 IRQ_TYPE_NONE>,
-						<0x2 0x40 0x6 IRQ_TYPE_NONE>;
+				interrupts =	<0x2 0x40 0x0>,
+						<0x2 0x40 0x1>,
+						<0x2 0x40 0x2>,
+						<0x2 0x40 0x3>,
+						<0x2 0x40 0x4>,
+						<0x2 0x40 0x5>,
+						<0x2 0x40 0x6>;
 
 				interrupt-names =	"high-soc",
 							"low-soc",
@@ -322,14 +350,14 @@
 
 			qcom,fg-batt@4100 {
 				reg = <0x4100 0x100>;
-				interrupts =	<0x2 0x41 0x0 IRQ_TYPE_NONE>,
-						<0x2 0x41 0x1 IRQ_TYPE_NONE>,
-						<0x2 0x41 0x2 IRQ_TYPE_NONE>,
-						<0x2 0x41 0x3 IRQ_TYPE_NONE>,
-						<0x2 0x41 0x4 IRQ_TYPE_NONE>,
-						<0x2 0x41 0x5 IRQ_TYPE_NONE>,
-						<0x2 0x41 0x6 IRQ_TYPE_NONE>,
-						<0x2 0x41 0x7 IRQ_TYPE_NONE>;
+				interrupts =	<0x2 0x41 0x0>,
+						<0x2 0x41 0x1>,
+					<0x2 0x41 0x2>,
+						<0x2 0x41 0x3>,
+						<0x2 0x41 0x4>,
+						<0x2 0x41 0x5>,
+						<0x2 0x41 0x6>,
+						<0x2 0x41 0x7>;
 
 				interrupt-names =	"soft-cold",
 							"soft-hot",
@@ -348,8 +376,8 @@
 			qcom,fg-memif@4400 {
 				status = "okay";
 				reg = <0x4400 0x100>;
-				interrupts =	<0x2 0x44 0x0 IRQ_TYPE_NONE>,
-						<0x2 0x44 0x2 IRQ_TYPE_NONE>;
+				interrupts =	<0x2 0x44 0x0>,
+						<0x2 0x44 0x2>;
 
 				interrupt-names =	"mem-avail",
 							"data-rcvry-sug";
@@ -360,8 +388,8 @@
 			compatible = "qcom,msm-bcl";
 			reg = <0x4200 0xFF 0x88E 0x2>;
 			reg-names = "fg_user_adc", "pon_spare";
-			interrupts = <0x2 0x42 0x0 IRQ_TYPE_NONE>,
-					<0x2 0x42 0x1 IRQ_TYPE_NONE>;
+			interrupts = <0x2 0x42 0x0>,
+					<0x2 0x42 0x1>;
 			interrupt-names = "bcl-high-ibat-int",
 					"bcl-low-vbat-int";
 			qcom,vbat-scaling-factor = <39000>;
@@ -385,8 +413,8 @@
 	};
 
 	qcom,pmi8950@3 {
-		compatible ="qcom,spmi-pmic";
-		reg = <0x3 SPMI_USID>;
+		spmi-slave-container;
+		reg = <0x3>;
 		#address-cells = <1>;
 		#size-cells = <1>;
 
@@ -402,11 +430,11 @@
 
 		labibb: qpnp-labibb-regulator {
 			status = "disabled";
+			spmi-dev-container;
 			compatible = "qcom,qpnp-labibb-regulator";
 			#address-cells = <1>;
 			#size-cells = <1>;
 			qcom,pmic-revid = <&pmi8950_revid>;
-			qcom,qpnp-labibb-mode = "lcd";
 
 			ibb_regulator: qcom,ibb@dc00 {
 				reg = <0xdc00 0x100>;
@@ -433,8 +461,7 @@
 
 				qcom,qpnp-ibb-full-pull-down;
 				qcom,qpnp-ibb-pull-down-enable;
-				qcom,qpnp-ibb-switching-clock-frequency =
-									<1480>;
+				qcom,qpnp-ibb-switching-clock-frequency = <1480>;
 				qcom,qpnp-ibb-limit-maximum-current = <1550>;
 				qcom,qpnp-ibb-debounce-cycle = <16>;
 				qcom,qpnp-ibb-limit-max-current-enable;
@@ -484,7 +511,7 @@
 					"qpnp-wled-sink-base",
 					"qpnp-wled-ibb-base",
 					"qpnp-wled-lab-base";
-			interrupts = <0x3 0xd8 0x2 IRQ_TYPE_EDGE_RISING>;
+			interrupts = <0x3 0xd8 0x2>;
 			interrupt-names = "sc-irq";
 			status = "okay";
 			linux,name = "wled";
@@ -501,10 +528,9 @@
 			qcom,hyb-thres = <625>;
 			qcom,sync-dly-us = <800>;
 			qcom,fs-curr-ua = <20000>;
+			qcom,en-cabc;
 			qcom,led-strings-list = [00 01];
 			qcom,en-ext-pfet-sc-pro;
-			qcom,wled-stepper-en;
-			qcom,pmic-revid = <&pmi8950_revid>;
 			qcom,cons-sync-write-delay-us = <1000>;
 		};
 
@@ -560,7 +586,7 @@
 						"torch0_trigger";
 				qcom,max-current = <200>;
 				qcom,id = <0>;
-				qcom,current = <120>;
+				qcom,current = <100>;
 			};
 
 			pmi8950_torch1: qcom,torch_1 {
@@ -570,9 +596,9 @@
 						"torch1_trigger";
 				qcom,max-current = <200>;
 				qcom,id = <1>;
-				qcom,current = <120>;
+				qcom,current = <100>;
 			};
-			
+
 			pmi8950_torch2: qcom,torch_2 {
 				label = "torch";
 				qcom,led-name = "flashlight";
@@ -598,55 +624,27 @@
 			};
 		};
 
-		pmi_haptic: qcom,haptics@c000 {
-			compatible = "qcom,qpnp-haptics";
+		pmi_haptic: qcom,haptic@c000 {
+			compatible = "qcom,qpnp-haptic";
 			reg = <0xc000 0x100>;
-			interrupts = <0x3 0xc0 0x0 IRQ_TYPE_EDGE_BOTH>,
-					<0x3 0xc0 0x1 IRQ_TYPE_EDGE_BOTH>;
-			interrupt-names = "hap-sc-irq", "hap-play-irq";
-			qcom,pmic-revid = <&pmi8950_revid>;
+			interrupts = <0x3 0xc0 0x0>,
+					<0x3 0xc0 0x1>;
+			interrupt-names = "sc-irq", "play-irq";
 			vcc_pon-supply = <&pon_perph_reg>;
-			qcom,int-pwm-freq-khz = <505>;
 			qcom,play-mode = "direct";
 			qcom,wave-play-rate-us = <5263>;
-			qcom,actuator-type = <1>;
+			qcom,actuator-type = "erm";
 			qcom,wave-shape = "square";
 			qcom,vmax-mv = <2700>;
 			qcom,ilim-ma = <800>;
 			qcom,sc-deb-cycles = <8>;
-			qcom,brake-pattern = <0x3 0x3 0x0 0x0>;
-			qcom,wave-samples = <0x3e 0x3e 0x3e 0x3e 0x3e
-							0x3e 0x3e 0x3e>;
+			qcom,int-pwm-freq-khz = <505>;
+			qcom,brake-pattern = [03 03 00 00];
+			qcom,use-play-irq;
+			qcom,use-sc-irq;
+			qcom,wave-samples = [3e 3e 3e 3e 3e 3e 3e 3e];
 			qcom,wave-rep-cnt = <1>;
 			qcom,wave-samp-rep-cnt = <1>;
 		};
-	};
-};
-
-&thermal_zones {
-	chg-temp-adc {
-		polling-delay-passive = <0>;
-		polling-delay = <0>;
-		thermal-sensors = <&pmi8950_vadc 0xd>;
-		thermal-governor = "user_space";
-
-		trips {
-			active-config0 {
-				temperature = <65000>;
-				hysteresis = <1000>;
-				type = "passive";
-			};
-		};
-	};
-};
-
-&soc {
-	led_flash0: qcom,camera-flash {
-		cell-index = <0>;
-		compatible = "qcom,camera-flash";
-		qcom,flash-type = <1>;
-		qcom,flash-source = <&pmi8950_flash0 &pmi8950_flash1>;
-		qcom,torch-source = <&pmi8950_torch0 &pmi8950_torch1>;
-		qcom,switch-source = <&pmi8950_switch>;
 	};
 };
